# egd_parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  json-schema.md  parsing-notes.md  refactoring-roadmap.md
scripts/: analyze_templates_quality.py  build_regression_report.py  cache_templates_results.py  run_attempt.py  run_batch_attempts.py  run_selected_attempts.py
src/egd_parser/: __init__.py
src/egd_parser/api/: app.py  normalizer.py
src/egd_parser/api/routes/: health.py  jobs.py  metrics.py  parse.py
src/egd_parser/api/schemas/: request.py  response.py
src/egd_parser/application/services/: attempt_document.py  inspect_document.py  job_models.py  job_service.py  parse_document.py
src/egd_parser/domain/models/: document.py  extracted_fields.py  ocr.py  page.py
src/egd_parser/domain/ports/: ocr_engine.py  pdf_renderer.py
src/egd_parser/domain/reference/: __init__.py  buildings.py  moscow.py  okato_regions.py
src/egd_parser/domain/value_objects/: address.py  bbox.py  money.py
src/egd_parser/infrastructure/: housekeeping.py  settings.py
src/egd_parser/pipeline/: runner.py
src/egd_parser/utils/: region_ocr.py
src/egd_parser_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: test_jobs_endpoint.py  test_parse_endpoint.py
tests/unit/: test_health.py  test_page1_extractor.py  test_page2_document_heuristics.py  test_page2_name_heuristics.py  test_page2_without_registration.py  test_registered_name_normalization.py
(+60 files in other folders)
